# oystr

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  boyer_moore_horspool_searcher.cpp  file_search.cpp  main.cpp  search.cpp  search.hpp
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
source/: argparse.hpp  avx2_memchr.cpp  avx2_memchr.hpp  avx2_strstr.cpp  avx2_strstr.hpp  avx512f_strstr.cpp  avx512f_strstr.hpp  avx_512f_strstr.cpp  glob.cpp  help.hpp  main.cpp  mio.hpp  search.cpp  search.hpp  searcher.cpp  searcher.hpp  simd_common.hpp  task_system.hpp  termcolor.hpp  terminal_size.hpp
test/: CMakeLists.txt
test/source/: search_test.cpp
